--- a/main.css
+++ b/main.css
@@ -24,7 +24,10 @@ p {
     color: black;
     font-size: 24px;
     text-align: center;
-    margin-bottom: .875em;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-right: 125px;
+    margin-left: 125px;
 }
 
 .social {
