--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ h1 {
 
 h3 {
     color: black;
-    font-size: 24px;
+    font-size: 22px;
     text-align: center;
     font-weight: bold;
 }
@@ -24,8 +24,8 @@ p {
     color: black;
     font-size: 24px;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     margin-right: 125px;
     margin-left: 125px;
 }
@@ -36,5 +36,19 @@ p {
 
 .navigation {
     text-align: center;
-    font-size: 16px;
+    font-size: 24px;
+}
+
+.name {
+    margin-top: 210px;
+}
+
+.profileText {
+    color: black;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 400px;
+    margin-left: 50px;
 }
