--- a/main.css
+++ b/main.css
@@ -33,12 +33,11 @@ p {
     color: black;
     font-size: 24px;
     text-align: center;
-    margin-right: 125px;
-    margin-left: 125px;
 }
 
 .social {
     text-align: center;
+    margin-top: 15px;
 }
 
 .navigation {
@@ -143,16 +142,21 @@ p {
 
 
 .column {
-  float: left;
-  width: 50%;
-  margin-top: 2px;
-  padding: 20px;
+  display:inline-block;
+  width: 5%;
+  padding: 5px;
 }
 
 .row:after {
   content: "";
   display: table;
   clear: both;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 input[type=text], select, textarea {
