--- a/main.css
+++ b/main.css
@@ -31,8 +31,25 @@ h3 div {
 
 p {
     color: black;
-    font-size: 24px;
+    font-size: 25px;
     text-align: center;
+    position: relative;
+}
+
+img {
+  position: relative;
+}
+
+.JohnPicture {
+  position: relative;
+}
+
+.alignLeft {
+  float: left;
+}
+
+.alignRight {
+  float: right;
 }
 
 .social {
@@ -52,6 +69,7 @@ p {
 .navigation {
     text-align: center;
     font-size: 24px;
+    position: relative;
 }
 
 .name {
@@ -172,6 +190,12 @@ p {
 	display: inline-block;
 	width: 15%;
 	padding: 5px;
+}
+
+.columnProfile {
+  display: inline-block;
+  width: 45%;
+  padding: 5px;
 }
 
 input[type=text], select, textarea {
