sorted the images into a folder. start adding projects

--- a/main.css
+++ b/main.css
@@ -12,6 +12,9 @@ h1 {
     font-size: 40px;
     text-align: center;
     font-weight: bold;
+}
+
+h1 div {
     position: relative;
 }
 
@@ -20,8 +23,11 @@ h3 {
     font-size: 22px;
     text-align: center;
     font-weight: bold;
-    position: relative;
-} 
+}
+
+h3 div {
+  position: relative;
+}
 
 p {
     color: black;
