--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@ body {
     background: #66b1fb;
 }
 
+a {
+  text-decoration: none;
+  color: #003366;
+}
+
 h1 {
     color: black;
     font-size: 40px;
@@ -227,11 +232,11 @@ img {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
+  margin-top: -16px;
+  padding: 40px;
+  color: #003366;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 80px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -303,5 +308,4 @@ img {
   text-align: center;
   font-size: 20px;
   margin-left: 45%;
-  margin-right: 45%;
 }
